cabal-version:       >=1.10

name:                cronus
version:             0.1.0.0
synopsis:            Another bloated standard library
description:         Another bloated standard library.
license:             MIT
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          sgschlesinger@gmail.com
copyright:           (c) 2020 Samuel Schlesinger
category:            Prelude
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with: GHC ==8.6.1 || ==8.6.2 || ==8.6.3 || ==8.8.1 || ==8.8.2 || ==8.8.3 || ==8.10.1

source-repository head
  type: git 
  location: https://github.com/samuelschlesinger/cronus

library
  exposed-modules:
    Cronus,
    Cronus.Text.Strict,
    Cronus.Text.Lazy,
    Cronus.ByteString.Strict,
    Cronus.ByteString.Lazy,
    Cronus.HashMap.Lazy,
    Cronus.HashMap.Strict,
    Cronus.HashSet,
    Cronus.Graph,
    Cronus.IntMap.Strict,
    Cronus.IntMap.Lazy,
    Cronus.IntSet,
    Cronus.Map.Lazy,
    Cronus.Map.Strict,
    Cronus.Sequence,
    Cronus.Set,
    Cronus.Tree,
    Cronus.Vector
  other-extensions:
    NoImplicitPrelude
  build-depends:
    base >=4.5 && <5,
    deepseq >=1.4,
    text >=1.0,
    bytestring >= 0.8,
    containers >= 0.6,
    unordered-containers >= 0.2,
    hashable >= 1.0,
    transformers >=0.5.6,
    mtl >=2.2,
    profunctors >=5.5,
    vector >=0.10,
    comonad >=5.0
  default-language:
    Haskell2010
